--- a/menu.html
+++ b/menu.html
@@ -13,8 +13,8 @@
             <h4><span>fresh food for good health</span> our menu</h4>
         </div>
         <div class="menu">
-            <div class= "single-menu">
-                <img src="cheese.jgp" alt="">
+             <div class= "single-menu">
+                <img src="cheese.jpg" alt="">
                 <div class= "menu-content">
                     <h4> chicken fried salad <span>$45</span></h4>
                     <p>just cheese pizza</p>
